# efl

./: CHANGELOG.md  LICENSE  efl.cabal
app/: Main.hs
src/: CAMachine.hs  CEKMachine.hs  Parser.hs  Syntax.hs  TypeChecker.hs
test/: CAMachineSpec.hs  Main.hs  ParserSpec.hs  TypeCheckerSpec.hs
