cabal-version:      3.4
name:               efl
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Shota Arakaki
maintainer:         syotaa1@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Syntax,
                      Parser,
                      TypeChecker,
                      CAMachine,
                      CEKMachine
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      bytestring,
                      containers,
                      effectful,
                      mtl,
                      trifecta
    hs-source-dirs:   src
    default-language: GHC2021

executable efl
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        bytestring,
        containers,
        haskeline,
        mtl,
        trifecta,
        efl

    hs-source-dirs:   app
    default-language: GHC2021

test-suite efl-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:    
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        bytestring,
        containers,
        effectful,
        trifecta,
        hspec,
        QuickCheck,
        efl
